# module_microsd_low_level_driver

./: CMakeLists.txt  README.md  makefile  microsd_base.h  microsd_card.cpp  microsd_card.h  microsd_card_sdio.cpp  microsd_card_sdio.h  microsd_card_spi.cpp  microsd_card_spi.h  user_hardware_interface_template.h
microsd_card_sdio/inc/: microsd_card_sdio.h
microsd_card_sdio/src/: microsd_card_sdio.cpp
microsd_card_spi/inc/: microsd_card_spi.h
